# crow

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  README.md  deploy  flake.nix
.github/workflows/: build-client.yml  build.yaml
backend-web/: .gitignore  Cargo.toml  config.toml
backend-web/.sqlx/: query-030d4f5bff59c52e23c2468dfb26c43ef9e3108797fee9f9f68fbc51fda8e15c.json  query-039e90cb88d9025478a8be6277ca2f455a9efdb4449d7104448f5f21cfeea7c7.json  query-05b5f781d5fd0e041d67bf33a65ad91cce8ab86ba4a2670dc44eb4f77d59cc68.json  query-075cc300359c0c3e25994207894c60180d3a4607c91a871c9a8b426d70982a34.json  query-07cb4f65d785dbffdfb11973661225be880ab3b50d0f588b8c381fca0b99549f.json  query-0825d8fe5defcdd9259f49bcf406affa7dc02d13dfd03b0de80328d7da7402f1.json  query-0aaf6123f2119656b6e4ad40dc88f6d9d047eef113cfc7b677e5d0f5ba3b9f6a.json  query-0ac7f7adf558c34fa0caa1d18be7c22f7f41f5a9cf931a310200b45c09601275.json  query-0bba2123017e8705086f55e14161caa87d18a7645b79116e84ac924c8e783d2a.json  query-0c0b10bb5f8330d19e77e97b8509a41be736880cbd19daa3933d3fbeb19e84c7.json  query-12400143420aeb2c39471cdf7b24f4096cf6f2f628110a120fc8657b184e5b67.json  query-12d33daafaf8c20e15ad7d5bf28f0db7ddf1b66e4a4015c21ee44b311964089a.json  query-136bab8feab3d425fd8fd771d394a10bcd88224361c8af4810565408c6bfe191.json  query-19cbf738dfd95f907a6d2300e6263ac9c78459a8d2b0ab4ce7df6cbef3a38ca3.json  query-19f468f5e4db45c53d6cc1a526d2b4e32c0a8f802421c3ad3080d383d152ca71.json  query-1a6f4883809e9476000406aa6586f29b0244b9aef55278b11addcc86fbbecd1f.json  query-1c70f83494ec993b801e30fcd56f7d91a2b46bf4e36b685f02e880de38504c54.json  query-1cd7616c7f102d037b9f45d12be5b9ffb31bf263a0c132d8eddbc7b498149e74.json  query-1e793147748decbe33ee1d6470dd910eee1ec47fe19250d5a0e97182b1b04cd9.json  query-1f00ae129167cb6c8dc99287d5efbadfb642f0ebd28fe74b04d9cc86ca052234.json  query-1fedd9b838b1cae511967a30c7942324aac11b0299e5d67d0c2f0cac556f1e63.json  query-2003f28d77cfec17c8d0eef7e2cad7defd39ea02beed88cde29504ca6f7b01e7.json  query-2119e04ccbe754fb872b639b66c5a2b518cec9378ae1750ebb10aabeea3fd588.json  query-2e0362649db55bae0d659b5c31b9e1c22949291b65e74d9c4397215988fc70ae.json  query-2e11153df19a488c66ffb768df99854d8d44eed97510a24687709106ac96e66d.json  query-2f9464551e268e095acac58c0a056c6ab3b22073daadf79971ccaa5279b988c2.json  query-368257d54fac5d06b209e2b19d3416df7d2f008e00e66d9cbb59069a86d957c9.json  query-380910b3c54708bf94ec1255aecc073dfcf3d6a7df6f7809a136ce51cd28bbea.json  query-382e48ace1754e05d792f5c38ed416c5d930ef0c058c2f387452ef62c9aea110.json  query-39b5f0fb5b9e9c9438d0b82c8181878236e9a73d53138bfc3ba793a8931c7a4e.json  query-3a20b5ccab6bb93b96537843071181fa4d2d1cd4b808cbe4049952574ae66006.json  query-3bb8cad84f85c7d63c36b4fc2b1f97c9ce85d1391f601bd4a60f6ec92d2ec37f.json  query-3dad78a3fa9d0d5920097dc4d049cb4ac577c1c2abb790f9314fc4bc846f7b3d.json  query-42da8f78cf99cade06cca8c687e07ac98ea8c8ef4c052e18e29140f6d65e08a3.json  query-43eef57bda6f930e97504fa721ed5e88edf194118aa410a45842faec2cd60d15.json  query-444ecbfe91eb8add52b8ec5ddde61e51fb661a2ffde40c0d7a604a03f028544c.json  query-462eb15b6db4f3bf9170aa1459824ec8304357b8231181035da71df60292a954.json  query-46d1f88f7605023dd8026c691fc6daa66510872245ea31ca0e561521d0f82284.json  query-4796998b6240983b969765c049ca637598d9fa55ec04adddec6d52fb46ec7027.json  query-47c9e8604907405fc932fe1a80232e43874af34768b5bdff609f49c6c75863ac.json  (+101 more)
backend-web/migrations/: 20241231200444_Initial_schema.sql  20250512204815_Add_task-team_index.sql  20250513114008_Add_top_task_indices.sql  20250520095637_Finalize_submitted_tasks.sql  20250520154041_Limit_tests_to_category.sql
backend-web/src/: auth.rs  config.rs  db.rs  endpoints.rs  error.rs  grading_formulas.rs  main.rs  storage.rs  types.rs
backend-web/src/auth/: extractors.rs  oidc.rs
backend-web/src/db/: external.rs  queue.rs  repo.rs  task.rs  team.rs  test.rs  user.rs
backend-web/src/endpoints/: admin.rs  execution.rs  executor.rs  oidc.rs  repo.rs  streaming.rs  tasks.rs  team.rs  test.rs  user.rs  users.rs
backend-web/src/integration/: github.rs  mod.rs
backend-web/src/types/: execution.rs  external.rs  queue.rs  repo.rs  task.rs  test.rs  test_tasting.rs  user.rs
client/: Cargo.toml
client/src/: auth.rs  commands.rs  context.rs  error.rs  formats.rs  main.rs  util.rs
client/src/commands/: login.rs  run_test.rs  sync_tests.rs  upload.rs
executor/: Cargo.toml
executor/resources/: runc-overlay.json  runc-read-write.json
executor/src/: containers.rs  docker.rs  executor.rs  main.rs  mode_driver.rs  mode_executor.rs  mode_shim.rs  task_executor.rs  test_validation.rs
executor/src/mode_executor/: test_compiler.rs  test_tasting.rs
frontend/: .env.production  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
frontend/src/assets/: fonts.css  index.css
frontend/src/components/: AutoSelectedGradedMarker.vue  BuildOutputOverview.vue  CreateTestDialog.vue  DataLoadingExplanation.vue  FinishedTask.vue  FinishedTaskOverview.vue  FinishedTestDetailDialog.vue  FinishedTestcaseSummaryIcon.vue  GradedTasks.vue  InputOrReadonly.vue  ManuallyOverrideDialog.vue  NavBar.vue  PageContainer.vue  PaginationControls.vue  ProcessOutputDisplay.vue  QueuedTasksOverview.vue  RunningTask.vue  SelectOrReadonly.vue  SetTestDialog.vue  SetupRepo.vue  SlotOrReadonly.vue  SubmitRevision.vue  TaskQuickOverview.vue  TestDetail.vue  TestDetailDialog.vue  TestModifierSelect.vue  TestOverview.vue  TestOverviewMatrix.vue  TestOverviewTable.vue  TopRunsPerTeam.vue  UsernameDisplay.vue
frontend/src/data/: fetching.ts  network.ts
frontend/src/lib/: boids.ts  maths.ts  utils.ts
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/views/: AccountNotReadyView.vue  AdminView.vue  AllTasksView.vue  (+8 more)
resources/: runc-overlay.json  runc-read-write.json
shared/: Cargo.toml
shared/src/: execute.rs  exit.rs  judge.rs  lib.rs
src/: containers.rs  docker.rs  executor.rs  main.rs  types.rs
(+94 files in other folders)
