[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.18.1"
derive_more = { version = "1.0.0", features = ["full"] }
futures-util = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
snafu = { version = "0.8.5", features = ["futures", "std"] }
tar = "0.4.43"
tempfile = "3.14.0"
tokio = { version = "1.41.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
