[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
libc = "0.2.169"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
snafu = { version = "0.8.5", features = ["futures", "std"] }
tar = "0.4.43"
tempfile = "3.14.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
