[package]
name = "backend-web"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
axum = { version = "0.7.9", features = ["macros", "ws"] }
clap = { version = "4.5.23", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
snafu = { version = "0.8.5", features = ["std"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
toml = "0.8.19"
axum-prometheus = { version = "0.8.0", default-features = false, features = ["prometheus"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
axum-extra = { version = "0.9.6", features = ["typed-header", "cookie"] }
shared = { version = "0.1.0", path = "../shared" }
parse_duration = "2.1.1"
uuid = { version = "1.11.0", features = ["v4"] }
tempfile = "3.14.0"
tokio-util = { version = "0.7.13", features = ["io"] }
futures-util = "0.3.31"
octocrab = "0.42.1"
url = "2.5.4"
time = "0.3.37"
crypto_box = { version = "0.9.1", features = ["seal"] }
base64 = "0.22.1"
openidconnect = "4.0.0"
reqwest = "0.12.12"
oauth2 = "5.0.0"
sha2 = "0.10.8"
jiff = { version = "0.2.10", features = ["serde"] }
evalexpr = { version = "12.0.2", features = ["serde"] }

[lints]
workspace = true
