[package]
name = "client"
edition.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
console = "0.15.10"
dialoguer = "0.11.0"
keyring = { version = "3.6.1", features = ["apple-native", "linux-native-sync-persistent", "windows-native"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
snafu = { version = "0.8.5", features = ["std", "futures"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lints]
workspace = true
