[package]
name = "client"
edition.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
console = "0.15.10"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
indicatif = "0.17.11"
keyring = { version = "3.6.1", features = ["apple-native", "linux-native-sync-persistent", "windows-native"] }
reqwest = { version = "0.12.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
shared = { version = "0.1.0", path = "../shared" }
similar = "2.7.0"
snafu = { version = "0.8.5", features = ["std", "futures"] }
tempfile = "3.17.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"

[lints]
workspace = true
